# multi-agent-content-studio

./: .gitattributes  .gitignore  LICENSE  README.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py  patch.py
backend/app/api/: deps.py  middleware.py  schemas.py
backend/app/api/routers/: health.py  jobs.py
backend/app/core/: config.py  constants.py  errors.py  logging.py  redis.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  content_job.py  draft.py  evaluation.py  research.py  run.py  strategy.py  user.py
backend/app/domain/agents/: __init__.py  factory.py  prompt_loader.py
backend/app/domain/crews/: __init__.py  builder.py
backend/app/domain/flows/: __init__.py  content_intelligence_flow.py  persistence.py  runner.py  section_regeneration_flow.py
backend/app/domain/llm/: crew_llm.py  openrouter_llm.py  provider.py
backend/app/domain/models/: __init__.py  competitor_analysis.py  content_gap_report.py  content_strategy.py  (+4 more)
backend/app/integrations/: base.py  fallback_client.py  firecrawl_client.py  gemini_client.py  groq_client.py  langfuse_tracer.py  openrouter_client.py  retry.py  serper_client.py  types.py
backend/app/services/: __init__.py  job_service.py  wiring.py
backend/app/tools/: __init__.py  _bridge.py  firecrawl_tool.py  serper_tool.py
backend/scripts/: init_db.py
backend/tests/: conftest.py  fakes.py  test_agents.py  test_api.py  test_domain_models.py  test_flows.py  test_foundation.py  test_integrations.py  test_llm_provider.py  test_tasks.py  test_tools.py
(+72 files in other folders)
