[project]
name = "ai-content-intelligence-studio"
version = "0.1.0"
description = "Multi-Agent AI Content Intelligence Platform (CrewAI core)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "arq>=0.26",
    "structlog>=24.4",
    "httpx>=0.27",
    "tenacity>=9.0",
    "crewai>=1.14,<2",
    "langfuse>=2.53",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.12",
    "markdown>=3.7",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "testcontainers[postgres]>=4.8",
    "ruff>=0.8",
    "mypy>=1.13",
    "import-linter>=2.1",
    "respx>=0.21",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "Clean Architecture layering"
type = "layers"
layers = [
    "app.api",
    "app.services",
]

[tool.setuptools]
packages = ["app"]
